--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.projects</groupId>
-  <artifactId>KorporacjaTaxi</artifactId>
+  <artifactId>TaxiCorporation</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>KorporacjaTaxi</name>
 
