--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <version>4.0.16-alpha</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
